# Multi_agents_project

./: .gitignore  main.py  pyproject.toml  requirements.txt
config/: config.yaml
docs/: README.md  api_reference.md  architecture.md  user_guide.md
src/: __init__.py
src/agents/: __init__.py  analysis_agent.py  coordinator.py  data_agent.py  explanation_agent.py  graph_agent.py
src/analysis/: __init__.py  fairness_metrics.py  predictive_models.py  stats_utils.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: __init__.py  chart_renderer.py  query_form.py  report_generator.py
src/data/: __init__.py  data_cleaner.py  mimic_connector.py  optimized_mimic_connector.py  prom_extractor.py  validator.py
src/graph/: __init__.py  graphrag_indexer.py  neo4j_driver.py
src/utils/: __init__.py  clinical_knowledge.py  config_loader.py  json_validator.py  logging_config.py
src/visualization/: __init__.py  viz_utils.py
tests/: __init__.py  test_analysis_agent.py  test_bigquery_neo4j_groq.py  test_cleaner.py  test_coordinator.py  test_data_agent.py  test_graph_agent.py  test_mimic_connector.py
